# RDV-Snowman

./: .gitignore  CMakeLists.txt  README.md  build.sh
RDV-Snowman-main/: clean.sh
RDV-Snowman-main/src/: constants.h
src/: constants.h  geometry.h  main.cpp
src/glad/: glad.c  glad.h
